Task 1: Complete data analysis and preprocessing - EDA, feature engineering, geolocation integration, and class imbalance handling

--- a/notebooks/eda-fraud-data.ipynb
+++ b/notebooks/eda-fraud-data.ipynb
@@ -51,7 +51,417 @@
         "df = pd.read_csv(data_path)\n",
         "\n",
         "print(f\"Dataset shape: {df.shape}\")\n",
+        "print(f\"\\nColumns: {df.columns.tolist()}\")\n",
+        "print(f\"\\nData types:\\n{df.dtypes}\")\n",
         "df.head()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Data Overview and Basic Statistics\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Basic information\n",
+        "df.info()\n",
+        "print(\"\\n\" + \"=\"*80)\n",
+        "print(\"Statistical Summary\")\n",
+        "print(\"=\"*80)\n",
+        "df.describe()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Data Cleaning Checks\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check for missing values\n",
+        "missing = df.isnull().sum()\n",
+        "missing_percent = (missing / len(df)) * 100\n",
+        "missing_df = pd.DataFrame({\n",
+        "    'Missing Count': missing,\n",
+        "    'Percentage': missing_percent\n",
+        "})\n",
+        "print(\"Missing Values Analysis:\")\n",
+        "print(\"=\"*50)\n",
+        "print(missing_df[missing_df['Missing Count'] > 0])\n",
+        "if missing_df[missing_df['Missing Count'] > 0].empty:\n",
+        "    print(\"No missing values found!\")\n",
+        "\n",
+        "# Check for duplicates\n",
+        "duplicates = df.duplicated().sum()\n",
+        "print(f\"\\nDuplicate rows: {duplicates} ({duplicates/len(df)*100:.2f}%)\")\n",
+        "\n",
+        "# Check data types\n",
+        "print(\"\\nData Types:\")\n",
+        "print(df.dtypes)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Class Distribution Analysis (Target Variable)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Class distribution\n",
+        "class_counts = df['class'].value_counts()\n",
+        "class_percentages = df['class'].value_counts(normalize=True) * 100\n",
+        "\n",
+        "print(\"Class Distribution:\")\n",
+        "print(\"=\"*50)\n",
+        "print(f\"Legitimate (0): {class_counts[0]:,} ({class_percentages[0]:.2f}%)\")\n",
+        "print(f\"Fraudulent (1): {class_counts[1]:,} ({class_percentages[1]:.2f}%)\")\n",
+        "print(f\"\\nImbalance Ratio: {class_counts[0]/class_counts[1]:.2f}:1\")\n",
+        "\n",
+        "# Visualize class imbalance\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# Count plot\n",
+        "axes[0].bar(['Legitimate (0)', 'Fraudulent (1)'], class_counts.values, \n",
+        "            color=['#2ecc71', '#e74c3c'], alpha=0.7)\n",
+        "axes[0].set_title('Class Distribution (Count)', fontsize=14, fontweight='bold')\n",
+        "axes[0].set_ylabel('Count')\n",
+        "axes[0].set_ylim(0, max(class_counts.values) * 1.1)\n",
+        "for i, v in enumerate(class_counts.values):\n",
+        "    axes[0].text(i, v + max(class_counts.values)*0.01, f'{v:,}', \n",
+        "                ha='center', fontweight='bold')\n",
+        "\n",
+        "# Pie chart\n",
+        "axes[1].pie(class_counts.values, labels=['Legitimate (0)', 'Fraudulent (1)'],\n",
+        "            autopct='%1.2f%%', colors=['#2ecc71', '#e74c3c'], startangle=90)\n",
+        "axes[1].set_title('Class Distribution (Percentage)', fontsize=14, fontweight='bold')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Convert time columns to datetime\n",
+        "df['signup_time'] = pd.to_datetime(df['signup_time'])\n",
+        "df['purchase_time'] = pd.to_datetime(df['purchase_time'])\n",
+        "\n",
+        "# Numerical features\n",
+        "numerical_features = ['purchase_value', 'age', 'ip_address']\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+        "\n",
+        "for idx, feature in enumerate(numerical_features):\n",
+        "    axes[idx].hist(df[feature], bins=50, edgecolor='black', alpha=0.7)\n",
+        "    axes[idx].set_title(f'Distribution of {feature}', fontsize=12, fontweight='bold')\n",
+        "    axes[idx].set_xlabel(feature)\n",
+        "    axes[idx].set_ylabel('Frequency')\n",
+        "    axes[idx].grid(True, alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Statistical summary for numerical features\n",
+        "print(\"\\nStatistical Summary for Numerical Features:\")\n",
+        "print(\"=\"*60)\n",
+        "print(df[numerical_features].describe())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 7. Univariate Analysis - Categorical Features\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Categorical features\n",
+        "categorical_features = ['source', 'browser', 'sex']\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+        "\n",
+        "for idx, feature in enumerate(categorical_features):\n",
+        "    value_counts = df[feature].value_counts()\n",
+        "    axes[idx].bar(value_counts.index, value_counts.values, alpha=0.7, edgecolor='black')\n",
+        "    axes[idx].set_title(f'Distribution of {feature}', fontsize=12, fontweight='bold')\n",
+        "    axes[idx].set_xlabel(feature)\n",
+        "    axes[idx].set_ylabel('Count')\n",
+        "    axes[idx].tick_params(axis='x', rotation=45)\n",
+        "    axes[idx].grid(True, alpha=0.3, axis='y')\n",
+        "    \n",
+        "    # Add count labels\n",
+        "    for i, v in enumerate(value_counts.values):\n",
+        "        axes[idx].text(i, v + max(value_counts.values)*0.01, f'{v:,}', \n",
+        "                      ha='center', fontsize=9)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Value counts for categorical features\n",
+        "for feature in categorical_features:\n",
+        "    print(f\"\\n{feature} Distribution:\")\n",
+        "    print(\"=\"*40)\n",
+        "    print(df[feature].value_counts())\n",
+        "    print()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 8. Bivariate Analysis - Features vs Target\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Purchase value by class\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+        "\n",
+        "# Purchase value distribution by class\n",
+        "fraud_purchase = df[df['class'] == 1]['purchase_value']\n",
+        "legit_purchase = df[df['class'] == 0]['purchase_value']\n",
+        "\n",
+        "axes[0, 0].hist([legit_purchase, fraud_purchase], bins=50, \n",
+        "                label=['Legitimate', 'Fraud'], alpha=0.7, edgecolor='black')\n",
+        "axes[0, 0].set_title('Purchase Value Distribution by Class', fontsize=12, fontweight='bold')\n",
+        "axes[0, 0].set_xlabel('Purchase Value ($)')\n",
+        "axes[0, 0].set_ylabel('Frequency')\n",
+        "axes[0, 0].legend()\n",
+        "axes[0, 0].grid(True, alpha=0.3)\n",
+        "\n",
+        "# Box plot for purchase value\n",
+        "df.boxplot(column='purchase_value', by='class', ax=axes[0, 1])\n",
+        "axes[0, 1].set_title('Purchase Value by Class (Box Plot)', fontsize=12, fontweight='bold')\n",
+        "axes[0, 1].set_xlabel('Class')\n",
+        "axes[0, 1].set_ylabel('Purchase Value ($)')\n",
+        "axes[0, 1].set_xticklabels(['Legitimate', 'Fraud'])\n",
+        "\n",
+        "# Age distribution by class\n",
+        "fraud_age = df[df['class'] == 1]['age']\n",
+        "legit_age = df[df['class'] == 0]['age']\n",
+        "\n",
+        "axes[1, 0].hist([legit_age, fraud_age], bins=30, \n",
+        "               label=['Legitimate', 'Fraud'], alpha=0.7, edgecolor='black')\n",
+        "axes[1, 0].set_title('Age Distribution by Class', fontsize=12, fontweight='bold')\n",
+        "axes[1, 0].set_xlabel('Age')\n",
+        "axes[1, 0].set_ylabel('Frequency')\n",
+        "axes[1, 0].legend()\n",
+        "axes[1, 0].grid(True, alpha=0.3)\n",
+        "\n",
+        "# Fraud rate by source\n",
+        "fraud_by_source = df.groupby('source')['class'].agg(['count', 'sum', 'mean']).reset_index()\n",
+        "fraud_by_source.columns = ['source', 'total', 'fraud_count', 'fraud_rate']\n",
+        "fraud_by_source = fraud_by_source.sort_values('fraud_rate', ascending=False)\n",
+        "\n",
+        "axes[1, 1].bar(fraud_by_source['source'], fraud_by_source['fraud_rate']*100, \n",
+        "               alpha=0.7, edgecolor='black', color='#e74c3c')\n",
+        "axes[1, 1].set_title('Fraud Rate by Source (%)', fontsize=12, fontweight='bold')\n",
+        "axes[1, 1].set_xlabel('Source')\n",
+        "axes[1, 1].set_ylabel('Fraud Rate (%)')\n",
+        "axes[1, 1].grid(True, alpha=0.3, axis='y')\n",
+        "for i, v in enumerate(fraud_by_source['fraud_rate']*100):\n",
+        "    axes[1, 1].text(i, v + 0.5, f'{v:.2f}%', ha='center', fontsize=9)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Summary statistics by class\n",
+        "print(\"Summary Statistics by Class:\")\n",
+        "print(\"=\"*60)\n",
+        "print(\"\\nPurchase Value:\")\n",
+        "print(df.groupby('class')['purchase_value'].describe())\n",
+        "print(\"\\nAge:\")\n",
+        "print(df.groupby('class')['age'].describe())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Fraud rate analysis for categorical features\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+        "\n",
+        "categorical_features = ['source', 'browser', 'sex']\n",
+        "\n",
+        "for idx, feature in enumerate(categorical_features):\n",
+        "    fraud_rate = df.groupby(feature)['class'].mean() * 100\n",
+        "    fraud_rate = fraud_rate.sort_values(ascending=False)\n",
+        "    \n",
+        "    axes[idx].bar(fraud_rate.index, fraud_rate.values, alpha=0.7, \n",
+        "                  edgecolor='black', color='#e74c3c')\n",
+        "    axes[idx].set_title(f'Fraud Rate by {feature}', fontsize=12, fontweight='bold')\n",
+        "    axes[idx].set_xlabel(feature)\n",
+        "    axes[idx].set_ylabel('Fraud Rate (%)')\n",
+        "    axes[idx].tick_params(axis='x', rotation=45)\n",
+        "    axes[idx].grid(True, alpha=0.3, axis='y')\n",
+        "    \n",
+        "    # Add percentage labels\n",
+        "    for i, v in enumerate(fraud_rate.values):\n",
+        "        axes[idx].text(i, v + max(fraud_rate.values)*0.02, f'{v:.2f}%', \n",
+        "                      ha='center', fontsize=9)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Detailed fraud rate table\n",
+        "print(\"Fraud Rate by Category:\")\n",
+        "print(\"=\"*60)\n",
+        "for feature in categorical_features:\n",
+        "    fraud_stats = df.groupby(feature)['class'].agg(['count', 'sum', 'mean']).reset_index()\n",
+        "    fraud_stats.columns = [feature, 'total', 'fraud_count', 'fraud_rate']\n",
+        "    fraud_stats['fraud_rate_pct'] = fraud_stats['fraud_rate'] * 100\n",
+        "    fraud_stats = fraud_stats.sort_values('fraud_rate', ascending=False)\n",
+        "    print(f\"\\n{feature.upper()}:\")\n",
+        "    print(fraud_stats.to_string(index=False))\n",
+        "    print()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 10. Time-based Analysis\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extract time features\n",
+        "df['hour_of_day'] = df['purchase_time'].dt.hour\n",
+        "df['day_of_week'] = df['purchase_time'].dt.dayofweek\n",
+        "df['time_since_signup'] = (df['purchase_time'] - df['signup_time']).dt.total_seconds() / 3600  # in hours\n",
+        "\n",
+        "# Fraud rate by hour of day\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+        "\n",
+        "# Hour of day\n",
+        "fraud_by_hour = df.groupby('hour_of_day')['class'].agg(['count', 'mean']).reset_index()\n",
+        "fraud_by_hour.columns = ['hour', 'count', 'fraud_rate']\n",
+        "fraud_by_hour['fraud_rate_pct'] = fraud_by_hour['fraud_rate'] * 100\n",
+        "\n",
+        "axes[0].bar(fraud_by_hour['hour'], fraud_by_hour['fraud_rate_pct'], \n",
+        "            alpha=0.7, edgecolor='black', color='#e74c3c')\n",
+        "axes[0].set_title('Fraud Rate by Hour of Day', fontsize=12, fontweight='bold')\n",
+        "axes[0].set_xlabel('Hour of Day')\n",
+        "axes[0].set_ylabel('Fraud Rate (%)')\n",
+        "axes[0].grid(True, alpha=0.3, axis='y')\n",
+        "\n",
+        "# Day of week\n",
+        "day_names = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']\n",
+        "fraud_by_day = df.groupby('day_of_week')['class'].agg(['count', 'mean']).reset_index()\n",
+        "fraud_by_day.columns = ['day', 'count', 'fraud_rate']\n",
+        "fraud_by_day['fraud_rate_pct'] = fraud_by_day['fraud_rate'] * 100\n",
+        "\n",
+        "axes[1].bar([day_names[int(d)] for d in fraud_by_day['day']], \n",
+        "            fraud_by_day['fraud_rate_pct'], alpha=0.7, edgecolor='black', color='#e74c3c')\n",
+        "axes[1].set_title('Fraud Rate by Day of Week', fontsize=12, fontweight='bold')\n",
+        "axes[1].set_xlabel('Day of Week')\n",
+        "axes[1].set_ylabel('Fraud Rate (%)')\n",
+        "axes[1].grid(True, alpha=0.3, axis='y')\n",
+        "\n",
+        "# Time since signup distribution\n",
+        "axes[2].hist([df[df['class']==0]['time_since_signup'], \n",
+        "              df[df['class']==1]['time_since_signup']], \n",
+        "             bins=50, label=['Legitimate', 'Fraud'], alpha=0.7, edgecolor='black')\n",
+        "axes[2].set_title('Time Since Signup Distribution by Class', fontsize=12, fontweight='bold')\n",
+        "axes[2].set_xlabel('Time Since Signup (hours)')\n",
+        "axes[2].set_ylabel('Frequency')\n",
+        "axes[2].legend()\n",
+        "axes[2].grid(True, alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Summary\n",
+        "print(\"Time-based Fraud Analysis:\")\n",
+        "print(\"=\"*60)\n",
+        "print(f\"\\nAverage time since signup (Legitimate): {df[df['class']==0]['time_since_signup'].mean():.2f} hours\")\n",
+        "print(f\"Average time since signup (Fraud): {df[df['class']==1]['time_since_signup'].mean():.2f} hours\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 11. Key Insights and Summary\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"=\"*80)\n",
+        "print(\"KEY INSIGHTS FROM EDA\")\n",
+        "print(\"=\"*80)\n",
+        "\n",
+        "print(f\"\\n1. Dataset Size: {len(df):,} transactions\")\n",
+        "print(f\"2. Class Imbalance: {class_counts[0]/class_counts[1]:.2f}:1 (Legitimate:Fraud)\")\n",
+        "print(f\"   - Legitimate: {class_percentages[0]:.2f}%\")\n",
+        "print(f\"   - Fraudulent: {class_percentages[1]:.2f}%\")\n",
+        "\n",
+        "print(f\"\\n3. Missing Values: {df.isnull().sum().sum()} total missing values\")\n",
+        "print(f\"4. Duplicates: {df.duplicated().sum()} duplicate rows\")\n",
+        "\n",
+        "print(f\"\\n5. Purchase Value Statistics:\")\n",
+        "print(f\"   - Legitimate transactions: ${df[df['class']==0]['purchase_value'].mean():.2f} average\")\n",
+        "print(f\"   - Fraudulent transactions: ${df[df['class']==1]['purchase_value'].mean():.2f} average\")\n",
+        "\n",
+        "print(f\"\\n6. Age Statistics:\")\n",
+        "print(f\"   - Legitimate: {df[df['class']==0]['age'].mean():.1f} years average\")\n",
+        "print(f\"   - Fraudulent: {df[df['class']==1]['age'].mean():.1f} years average\")\n",
+        "\n",
+        "print(f\"\\n7. Time Analysis:\")\n",
+        "print(f\"   - Average time since signup (Legitimate): {df[df['class']==0]['time_since_signup'].mean():.2f} hours\")\n",
+        "print(f\"   - Average time since signup (Fraud): {df[df['class']==1]['time_since_signup'].mean():.2f} hours\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*80)\n"
       ]
     }
   ],
